--- a/English-Uzbek-bot/Pipfile
+++ b/English-Uzbek-bot/Pipfile
@@ -4,7 +4,9 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-aiogram = "*"
+aiogram = "~=2.14"
+requests = "*"
+googletrans = "==3.1.0a0"
 
 [dev-packages]
 
